# JokeScript

./: CMakeLists.txt  README.md  SECURITY.md
.github/workflows/: codeql-analysis-linux.yml  codeql-analysis-macos.yml  codeql-analysis-windows.yml  codeql-analysis.yml
JokeScript/: CMakeLists.txt  Joke.cpp  JokeScript.cpp  JokeScript.h  JokeScriptCommon.cpp  JokeScriptCommon.h  JokeScriptFunction.cpp  JokeScriptFunction.h  JokeScriptInfoLists.cpp  JokeScriptInfoLists.h  JokeScriptKeyword.cpp  JokeScriptKeyword.h  JokeScriptLoader.cpp  JokeScriptLoader.h  JokeScriptLog.cpp  JokeScriptLog.h  JokeScriptTree.cpp  JokeScriptTree.h  JokeScriptType.cpp  JokeScriptType.h  JokeScriptVariable.cpp  JokeScriptVariable.h
Joker/: CMakeLists.txt  JokeScript.cpp  common_io.cpp  common_io.h  common_structs.cpp  common_tools.cpp  common_tools.h  compiler_ctype.cpp  compiler_ctype.h  compiler_filereader.cpp  compiler_filereader.h  compiler_id_analyzer.h  compiler_identifier_holder.cpp  compiler_syntax_analyzer.cpp  compiler_syntax_analyzer.h  log.h  user_action.cpp  user_tools.cpp  user_tools.h
NewJokeScript/: CMakeLists.txt  JokeScript.cpp  JokeScript.h  common_io.cpp  common_io.h  common_structs.cpp  common_structs.h  common_tools.cpp  common_tools.h  compiler_ctype.cpp  compiler_ctype.h  compiler_filereader.cpp  compiler_filereader.h  compiler_id_analyzer.cpp  compiler_id_analyzer.h  compiler_identifier_holder.cpp  compiler_identifier_holder.h  compiler_syntax_analyzer.cpp  compiler_syntax_analyzer.h  compiler_tree_to_llvm.cpp  compiler_tree_to_llvm.h  compiler_type_analyzer.cpp  compiler_type_analyzer.h  llvms.h  log.cpp  log.h  main.cpp  stdcpps.h
build_tests/: build  build.bat  clean  clean.bat  config  config.bat  readme.md  run  run.bat
build_tests/cl_build/: CMakeLists.txt  build.bat  reconfig.bat  run.bat  vcvars_call.bat
build_tests/cl_build/src/common/: ctype.h  filereader.h  io.h  log.cpp  tools.cpp
build_tests/cl_build/src/compiler/parser/: syntax.cpp  type.h
build_tests/clang_build/: CMakeLists.txt  build.bat  clean  reconfig  reconfig.bat  run
build_tests/clang_build/src/common/: tools.h
build_tests/clang_build/src/compiler/data/: identifier.h  maker.cpp
build_tests/clang_build/src/compiler/parser/: type.cpp  variable.h
build_tests/clang_build/src/user/: user_action.h
build_tests/common/: build_common.bat  build_common.sh  clean_all.bat  clean_all.sh  clean_built.bat  clean_built.sh  copy_src.bat  copy_src.sh  reconfig_common.bat  reconfig_common.sh  run_common.bat  run_common.sh
build_tests/gcc_build/: CMakeLists.txt  build  clean.bat  reconfig  reconfig.bat
build_tests/gcc_build/src/compiler/data/: identifier.cpp
build_tests/gcc_build/src/public/: JokeScript.cpp  JokeScript.h
build_tests/gcc_build/src/user/: user_tools.cpp
build_tests/setting/: common_setting.bat  common_setting.sh  vs_setting.bat
docs/: JokeScript.txt  JokeScript_EBNF.txt  JokeScript_Example.txt
example/: readme.md
example/HTTPClient/: CMakeLists.txt  HTTPClient.cpp  HTTPClient.h  json_tools.cpp  json_tools.h  main.cpp
example/HTTPClient/common/: ctype.cpp  ctype.h  filereader.cpp  filereader.h  io.cpp  io.h  log.cpp  log.h  stdcpps.h  structs.cpp  structs.h  tools.cpp  tools.h
old/: CMakeLists.txt  JokeScript.cpp  JokeScriptCommon.cpp  JokeScriptCommon.h  JokeScriptFunction.h  JokeScriptInfoLists.cpp  JokeScriptLoader.cpp  JokeScriptMacro.h  JokeScriptTree.cpp  JokeScriptVariable.cpp
old/Joker/: CMakeLists.txt  JokeScript.cpp  common_structs.h  compiler_ctype.cpp  compiler_filereader.cpp  compiler_filereader.h  compiler_id_analyzer.cpp  compiler_identifier_holder.cpp  compiler_llvm.h  compiler_syntax_analyzer.cpp  main.cpp  stdcpps.h  user_action.cpp  user_action.h  user_tools.cpp  user_tools.h
old/NewJokeScript/: common_io.cpp  common_structs.h  common_tools.cpp  common_tools.h  compiler_id_analyzer.cpp  compiler_syntax_analyzer.cpp  compiler_syntax_analyzer.h  compiler_tree_to_llvm.cpp  llvms.h  main.cpp  stdcpps.h
src/: CMakeLists.txt  JokeScript.cpp  JokeScript.h  common_io.cpp  common_structs.cpp  common_structs.h  common_tools.cpp  common_tools.h  compiler_filereader.cpp  compiler_filereader.h  compiler_id_analyzer.cpp  compiler_id_analyzer.h  compiler_identifier_holder.cpp  compiler_identifier_holder.h  compiler_llvm.cpp  compiler_llvm.h  compiler_selfmade.h  compiler_syntax_analyzer.cpp  compiler_syntax_analyzer.h  log.cpp  log.h  stdcpps.h  user_action.cpp  user_action.h  user_tools.cpp  user_tools.h
src/common/: ctype.cpp  ctype.h  filereader.cpp  filereader.h  io.cpp  io.h  log.cpp  log.h  structs.cpp  structs.h  tools.h
src/compiler/: filereader.cpp  filereader.h  identifier.cpp  identifier.h  log.h  maker.cpp  syntax.cpp  syntax.h  type.cpp  variable.cpp
src/compiler/data/: identifier.cpp  identifier.h  maker.cpp
src/compiler/parser/: parser.h  syntax.cpp  syntax.h  variable.cpp  variable.h
src/executable/: main.cpp
src/public/: JokeScript.cpp
src/user/: json_tools.cpp  json_tools.h  user_action.cpp  user_action.h  user_tools.cpp  user_tools.h
